--- a/src/MovieDetails/MovieDetails.module.css
+++ b/src/MovieDetails/MovieDetails.module.css
@@ -1,4 +1,4 @@
-.movie-details {
+.movie_details {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -6,15 +6,15 @@
   margin-top: 20px;
 }
 
-.movie-details-content {
+.movie_details_content {
   width: 100%;
 }
 
-.movie-details-image {
+.movie_details_image {
   width: 200px;
   margin-right: 20px;
 }
 
-.movie-info {
+.movie_info {
   flex: 1;
 }
