--- a/src/Review/Review.module.css
+++ b/src/Review/Review.module.css
@@ -1,33 +1,33 @@
-.movie-details {
+.movie_details {
   display: flex;
   margin: 20px;
 }
 
-.movie-details-content {
+.movie_details_content {
   flex: 1;
   padding: 20px;
 }
 
-.movie-details-image {
+.movie_details_image {
   max-width: 300px;
   margin-right: 20px;
 }
 
-.movie-title {
+.movie_title {
   font-size: 24px;
   font-weight: bold;
 }
 
-.movie-overview {
+.movie_overview {
   margin-top: 10px;
 }
 
-.additional-info {
+.additional_info {
   margin-top: 20px;
-  background-color: red;
+  background-color: _;
 }
 
-.additional-info h3 {
+.additional_info h3 {
   cursor: pointer;
   margin-bottom: 10px;
 }
