--- a/src/Cast/Cast.module.css
+++ b/src/Cast/Cast.module.css
@@ -3,9 +3,10 @@
 }
 
 .list {
-  list-style: none;
-  padding: 0;
-  padding-left: 20px;
+  grid-gap: 15px;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(3, 1fr);
   list-style: none;
 }
 
