--- a/src/Movie/Movie.module.css
+++ b/src/Movie/Movie.module.css
@@ -20,3 +20,41 @@
   font-weight: bold;
   margin-top: 10px;
 }
+
+.title_movies {
+  text-align: center;
+}
+
+.title_movies {
+  font-size: 24px;
+  margin-bottom: 16px;
+  color: #333;
+}
+
+.form_movies {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search_input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 8px;
+  font-size: 16px;
+}
+
+button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
