--- a/src/MovieDetails/MovieDetails.module.css
+++ b/src/MovieDetails/MovieDetails.module.css
@@ -18,3 +18,15 @@
 .movie_info {
   flex: 1;
 }
+.goBackLink {
+  border: 1px solid #2196f3;
+  border-radius: 10px;
+  box-shadow: 1px 2px 2px 0 rgb(0, 0, 0/0.5);
+  cursor: pointer;
+  font-weight: 700;
+  margin-bottom: 350px;
+  padding: 8px 15px;
+  text-align: center;
+  transition: box-shadow 0.25s linear;
+  width: 80px;
+}
