--- a/src/Home/home.module.css
+++ b/src/Home/home.module.css
@@ -1,31 +1,59 @@
-.container {
+.homeContainer {
   padding: 20px;
+  text-align: center;
+  background-color: #766868;
 }
 
-h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.homeTitle {
+  font-size: 36px;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(179, 54, 54, 0.2);
+  color: #be2626d4;
 }
 
-ul {
+.movieList {
   list-style: none;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-li {
-  margin-bottom: 10px;
+.movieItem {
+  margin: 10px;
+  text-align: center;
 }
 
-a {
-  color: #007bff;
+.movieLink {
   text-decoration: none;
+  color: white;
+  transition: color 0.3s ease;
 }
 
-a:hover {
-  text-decoration: underline;
+.movieLink:hover {
+  color: #333;
 }
 
-li:first-child:active a {
-  text-decoration: none;
-  font-weight: bold;
+.movieCard {
+  background-color: #a31e1e;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+}
+
+.movieCard:hover {
+  transform: scale(1.05);
+}
+.movieImage {
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.movieTitle {
+  font-size: 16px;
+  margin-top: 10px;
+  color: white;
 }
