--- a/src/Movie/Movie.module.css
+++ b/src/Movie/Movie.module.css
@@ -1,8 +1,9 @@
-.movies_container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  margin: 20px;
+.movie_list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .movie_card {
@@ -21,14 +22,30 @@
   margin-top: 10px;
 }
 
+.movieItem {
+  width: calc(33.33% - 20px);
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.movieItem a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  color: #333;
+}
+.movieItem a:hover {
+  background-color: #be2626d4;
+  color: #be2626d4;
+}
 .title_movies {
   text-align: center;
-}
-
-.title_movies {
   font-size: 24px;
   margin-bottom: 16px;
-  color: #333;
+  color: #be2626d4;
 }
 
 .form_movies {
@@ -45,9 +62,13 @@
   font-size: 16px;
 }
 
+.search_input::placeholder {
+  color: #999;
+}
+
 button {
   padding: 8px 16px;
-  background-color: #007bff;
+  background-color: #da1818;
   color: white;
   border: none;
   border-radius: 4px;
@@ -56,5 +77,6 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #ff3333;
+  border: 1px solid #ff3333;
 }
