--- a/src/MovieDetails/MovieDetails.module.css
+++ b/src/MovieDetails/MovieDetails.module.css
@@ -2,31 +2,93 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin: 50px;
+  background-color: #333;
 }
 
 .movie_details_content {
-  width: 100%;
+  flex: 1;
+  padding: 20px;
 }
 
 .movie_details_image {
-  width: 200px;
+  max-width: 300px;
   margin-right: 20px;
 }
 
-.movie_info {
-  flex: 1;
+.movie_title {
+  font-size: 24px;
+  font-weight: bold;
 }
-.goBackLink {
-  border: 1px solid #2196f3;
-  border-radius: 10px;
-  box-shadow: 1px 2px 2px 0 rgb(0, 0, 0/0.5);
-  cursor: pointer;
-  font-weight: 700;
-  margin-bottom: 350px;
+
+.movie_info {
+  margin-bottom: 20px;
+}
+
+.movie_rating {
+  font-size: 18px;
+  font-weight: bold;
+  color: #007bff;
+}
+
+.movie_genre {
+  font-size: 16px;
+  color: #777;
+}
+
+.movie_overview {
+  margin-top: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #444;
+}
+.additional_info a {
+  display: inline-block;
+  margin-right: 10px;
+  margin-bottom: 10px;
   padding: 8px 15px;
-  text-align: center;
-  transition: box-shadow 0.25s linear;
-  width: 80px;
+  background-color: #ff5555;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.additional_info a:hover {
+  background-color: #ff3333;
+}
+
+.additional_info {
+  margin-top: 20px;
+  background-color: #333;
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
+}
+
+.additional_info h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #ff5555;
+}
+
+.goBackLink {
+  position: absolute;
+  top: 447px;
+  left: 20px;
+  padding: 8px 15px;
+  background-color: #da1818;
+  color: white;
+  border: 1px solid #ff5555;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.goBackLink:hover {
+  background-color: #ff3333;
+  border: 1px solid #ff3333;
 }
