--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,26 +1,52 @@
 .header {
-  background-color: #333;
+  background-image: url('/public/cinema-elements-on-red-background-with-copy-space.jpg');
   color: white;
-  padding: 10px;
+  padding: 20px;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .nav {
   display: flex;
   list-style: none;
   padding: 0;
-  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.nav-item {
+.navItem {
   margin-right: 20px;
 }
 
-.nav-link {
+.navItem {
   text-decoration: none;
-  color: #333;
+  color: #ff5555;
   font-weight: bold;
+  transition: color 0.3s ease;
 }
 
-.nav-link:hover {
-  color: #555;
+.navItem {
+  color: #ff9999;
+}
+
+.siteTitle {
+  font-size: 48px;
+  font-weight: bold;
+  color: #ff5555;
+  margin-bottom: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+a {
+  color: #a10606;
+}
+a:hover {
+  color: #ff9999;
 }
